src/antlr/MoveParser.ts
// Generated from Move.g4 by ANTLR 4.9.0-SNAPSHOT


import { ATN } from "antlr4ts/atn/ATN";
import { ATNDeserializer } from "antlr4ts/atn/ATNDeserializer";
import { FailedPredicateException } from "antlr4ts/FailedPredicateException";
import { NotNull } from "antlr4ts/Decorators";
import { NoViableAltException } from "antlr4ts/NoViableAltException";
import { Override } from "antlr4ts/Decorators";
import { Parser } from "antlr4ts/Parser";
import { ParserRuleContext } from "antlr4ts/ParserRuleContext";
import { ParserATNSimulator } from "antlr4ts/atn/ParserATNSimulator";
import { ParseTreeListener } from "antlr4ts/tree/ParseTreeListener";
import { ParseTreeVisitor } from "antlr4ts/tree/ParseTreeVisitor";
import { RecognitionException } from "antlr4ts/RecognitionException";
import { RuleContext } from "antlr4ts/RuleContext";
//import { RuleVersion } from "antlr4ts/RuleVersion";
import { TerminalNode } from "antlr4ts/tree/TerminalNode";
import { Token } from "antlr4ts/Token";
import { TokenStream } from "antlr4ts/TokenStream";
import { Vocabulary } from "antlr4ts/Vocabulary";
import { VocabularyImpl } from "antlr4ts/VocabularyImpl";

import * as Utils from "antlr4ts/misc/Utils";

import { MoveListener } from "./MoveListener";
import { MoveVisitor } from "./MoveVisitor";


export class MoveParser extends Parser {
	public static readonly T__0 = 1;
	public static readonly T__1 = 2;
	public static readonly T__2 = 3;
	public static readonly T__3 = 4;
	public static readonly T__4 = 5;
	public static readonly T__5 = 6;
	public static readonly T__6 = 7;
	public static readonly T__7 = 8;
	public static readonly T__8 = 9;
	public static readonly T__9 = 10;
	public static readonly T__10 = 11;
	public static readonly T__11 = 12;
	public static readonly T__12 = 13;
	public static readonly T__13 = 14;
	public static readonly T__14 = 15;
	public static readonly T__15 = 16;
	public static readonly T__16 = 17;
	public static readonly T__17 = 18;
	public static readonly T__18 = 19;
	public static readonly T__19 = 20;
	public static readonly T__20 = 21;
	public static readonly T__21 = 22;
	public static readonly T__22 = 23;
	public static readonly T__23 = 24;
	public static readonly T__24 = 25;
	public static readonly T__25 = 26;
	public static readonly T__26 = 27;
	public static readonly T__27 = 28;
	public static readonly T__28 = 29;
	public static readonly T__29 = 30;
	public static readonly T__30 = 31;
	public static readonly T__31 = 32;
	public static readonly T__32 = 33;
	public static readonly T__33 = 34;
	public static readonly T__34 = 35;
	public static readonly T__35 = 36;
	public static readonly T__36 = 37;
	public static readonly T__37 = 38;
	public static readonly T__38 = 39;
	public static readonly T__39 = 40;
	public static readonly T__40 = 41;
	public static readonly T__41 = 42;
	public static readonly T__42 = 43;
	public static readonly T__43 = 44;
	public static readonly T__44 = 45;
	public static readonly T__45 = 46;
	public static readonly T__46 = 47;
	public static readonly T__47 = 48;
	public static readonly T__48 = 49;
	public static readonly T__49 = 50;
	public static readonly T__50 = 51;
	public static readonly T__51 = 52;
	public static readonly T__52 = 53;
	public static readonly T__53 = 54;
	public static readonly T__54 = 55;
	public static readonly T__55 = 56;
	public static readonly T__56 = 57;
	public static readonly T__57 = 58;
	public static readonly T__58 = 59;
	public static readonly T__59 = 60;
	public static readonly T__60 = 61;
	public static readonly T__61 = 62;
	public static readonly T__62 = 63;
	public static readonly T__63 = 64;
	public static readonly T__64 = 65;
	public static readonly T__65 = 66;
	public static readonly T__66 = 67;
	public static readonly T__67 = 68;
	public static readonly T__68 = 69;
	public static readonly T__69 = 70;
	public static readonly T__70 = 71;
	public static readonly T__71 = 72;
	public static readonly T__72 = 73;
	public static readonly T__73 = 74;
	public static readonly T__74 = 75;
	public static readonly T__75 = 76;
	public static readonly T__76 = 77;
	public static readonly T__77 = 78;
	public static readonly T__78 = 79;
	public static readonly T__79 = 80;
	public static readonly T__80 = 81;
	public static readonly T__81 = 82;
	public static readonly T__82 = 83;
	public static readonly T__83 = 84;
	public static readonly Alphanumeric = 85;
	public static readonly Digit = 86;
	public static readonly Identifier = 87;
	public static readonly NumericalAddress = 88;
	public static readonly RULE_file = 0;
	public static readonly RULE_module = 1;
	public static readonly RULE_useDecl = 2;
	public static readonly RULE_useMember = 3;
	public static readonly RULE_useAlias = 4;
	public static readonly RULE_script = 5;
	public static readonly RULE_friendDecl = 6;
	public static readonly RULE_moduleMemberModifiers = 7;
	public static readonly RULE_moduleMemberModifier = 8;
	public static readonly RULE_visibility = 9;
	public static readonly RULE_attributeValue = 10;
	public static readonly RULE_attribute = 11;
	public static readonly RULE_commaAttribute = 12;
	public static readonly RULE_attributes = 13;
	public static readonly RULE_type = 14;
	public static readonly RULE_types = 15;
	public static readonly RULE_ability = 16;
	public static readonly RULE_optionalTypeArgs = 17;
	public static readonly RULE_typeParameter = 18;
	public static readonly RULE_typeParameters = 19;
	public static readonly RULE_constraint = 20;
	public static readonly RULE_typeParameterWithPhantomDecl = 21;
	public static readonly RULE_typeParameterWithPhantomDecls = 22;
	public static readonly RULE_optionalTypeParameters = 23;
	public static readonly RULE_structTypeParameter = 24;
	public static readonly RULE_functionDecl = 25;
	public static readonly RULE_functionDefName = 26;
	public static readonly RULE_parameters = 27;
	public static readonly RULE_parameter = 28;
	public static readonly RULE_sequence = 29;
	public static readonly RULE_sequenceItem = 30;
	public static readonly RULE_term = 31;
	public static readonly RULE_exp = 32;
	public static readonly RULE_binOp = 33;
	public static readonly RULE_binOpExp = 34;
	public static readonly RULE_unaryExp = 35;
	public static readonly RULE_dotOrIndexChain = 36;
	public static readonly RULE_quantifier = 37;
	public static readonly RULE_quantifierBindings = 38;
	public static readonly RULE_quantifierBind = 39;
	public static readonly RULE_exps = 40;
	public static readonly RULE_expField = 41;
	public static readonly RULE_bindField = 42;
	public static readonly RULE_bindFields = 43;
	public static readonly RULE_bind = 44;
	public static readonly RULE_binds = 45;
	public static readonly RULE_bindList = 46;
	public static readonly RULE_lambdaBindList = 47;
	public static readonly RULE_number = 48;
	public static readonly RULE_numberTyped = 49;
	public static readonly RULE_byteString = 50;
	public static readonly RULE_value = 51;
	public static readonly RULE_constantDecl = 52;
	public static readonly RULE_structDecl = 53;
	public static readonly RULE_structDefName = 54;
	public static readonly RULE_fieldAnnots = 55;
	public static readonly RULE_fieldAnnot = 56;
	public static readonly RULE_docComments = 57;
	public static readonly RULE_leadingNameAccess = 58;
	public static readonly RULE_var = 59;
	public static readonly RULE_field = 60;
	public static readonly RULE_moduleIdent = 61;
	public static readonly RULE_moduleName = 62;
	public static readonly RULE_nameAccessChain = 63;
	public static readonly RULE_addressBlock = 64;
	// tslint:disable:no-trailing-whitespace
	public static readonly ruleNames: string[] = [
		"file", "module", "useDecl", "useMember", "useAlias", "script", "friendDecl", 
		"moduleMemberModifiers", "moduleMemberModifier", "visibility", "attributeValue", 
		"attribute", "commaAttribute", "attributes", "type", "types", "ability", 
		"optionalTypeArgs", "typeParameter", "typeParameters", "constraint", "typeParameterWithPhantomDecl", 
		"typeParameterWithPhantomDecls", "optionalTypeParameters", "structTypeParameter", 
		"functionDecl", "functionDefName", "parameters", "parameter", "sequence", 
		"sequenceItem", "term", "exp", "binOp", "binOpExp", "unaryExp", "dotOrIndexChain", 
		"quantifier", "quantifierBindings", "quantifierBind", "exps", "expField", 
		"bindField", "bindFields", "bind", "binds", "bindList", "lambdaBindList", 
		"number", "numberTyped", "byteString", "value", "constantDecl", "structDecl", 
		"structDefName", "fieldAnnots", "fieldAnnot", "docComments", "leadingNameAccess", 
		"var", "field", "moduleIdent", "moduleName", "nameAccessChain", "addressBlock",
	];

	private static readonly _LITERAL_NAMES: Array<string | undefined> = [
		undefined, "'spec'", "'module'", "'::'", "'{'", "'}'", "'use'", "';'", 
		"','", "'as'", "'script'", "'friend'", "'native'", "'public'", "'('", 
		"')'", "'='", "'#'", "'['", "']'", "'<'", "'>'", "'&'", "'&mut'", "'|'", 
		"'copy'", "'drop'", "'store'", "'key'", "':'", "'+'", "'phantom'", "'fun'", 
		"'acquires'", "'let'", "'break'", "'continue'", "'vector'", "'if'", "'else'", 
		"'while'", "'loop'", "'return'", "'abort'", "'==>'", "'||'", "'&&'", "'=='", 
		"'!='", "'<='", "'>='", "'..'", "'^'", "'<<'", "'>>'", "'-'", "'*'", "'/'", 
		"'%'", "'!'", "'move'", "'.'", "'forall'", "'exists'", "'where'", "'choose'", 
		"'min'", "'in'", "'u8'", "'u64'", "'u128'", "'b\"'", "'x\"'", "'\"'", 
		"'@'", "'true'", "'false'", "'const'", "'struct'", "'has'", "'/\"'", "'\"/'", 
		"'//'", "'///'", "'address'",
	];
	private static readonly _SYMBOLIC_NAMES: Array<string | undefined> = [
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, "Alphanumeric", "Digit", "Identifier", "NumericalAddress",
	];
	public static readonly VOCABULARY: Vocabulary = new VocabularyImpl(MoveParser._LITERAL_NAMES, MoveParser._SYMBOLIC_NAMES, []);

	// @Override
	// @NotNull
	public get vocabulary(): Vocabulary {
		return MoveParser.VOCABULARY;
	}
	// tslint:enable:no-trailing-whitespace

	// @Override
	public get grammarFileName(): string { return "Move.g4"; }

	// @Override
	public get ruleNames(): string[] { return MoveParser.ruleNames; }

	// @Override
	public get serializedATN(): string { return MoveParser._serializedATN; }

	protected createFailedPredicateException(predicate?: string, message?: string): FailedPredicateException {
		return new FailedPredicateException(this, predicate, message);
	}

	constructor(input: TokenStream) {
		super(input);
		this._interp = new ParserATNSimulator(MoveParser._ATN, this);
	}
	// @RuleVersion(0)
	public file(): FileContext {
		let _localctx: FileContext = new FileContext(this._ctx, this.state);
		this.enterRule(_localctx, 0, MoveParser.RULE_file);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 135;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la === MoveParser.T__9 || ((((_la - 80)) & ~0x1F) === 0 && ((1 << (_la - 80)) & ((1 << (MoveParser.T__79 - 80)) | (1 << (MoveParser.T__81 - 80)) | (1 << (MoveParser.T__82 - 80)) | (1 << (MoveParser.T__83 - 80)))) !== 0)) {
				{
				this.state = 133;
				this._errHandler.sync(this);
				switch (this._input.LA(1)) {
				case MoveParser.T__83:
					{
					this.state = 130;
					this.addressBlock();
					}
					break;
				case MoveParser.T__79:
				case MoveParser.T__81:
				case MoveParser.T__82:
					{
					this.state = 131;
					this.module();
					}
					break;
				case MoveParser.T__9:
					{
					this.state = 132;
					this.script();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				this.state = 137;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public module(): ModuleContext {
		let _localctx: ModuleContext = new ModuleContext(this._ctx, this.state);
		this.enterRule(_localctx, 2, MoveParser.RULE_module);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 138;
			this.docComments();
			this.state = 139;
			_la = this._input.LA(1);
			if (!(_la === MoveParser.T__0 || _la === MoveParser.T__1)) {
			this._errHandler.recoverInline(this);
			} else {
				if (this._input.LA(1) === Token.EOF) {
					this.matchedEOF = true;
				}

				this._errHandler.reportMatch(this);
				this.consume();
			}
			this.state = 143;
			this._errHandler.sync(this);
			switch ( this.interpreter.adaptivePredict(this._input, 2, this._ctx) ) {
			case 1:
				{
				this.state = 140;
				this.leadingNameAccess();
				this.state = 141;
				this.match(MoveParser.T__2);
				}
				break;
			}
			this.state = 145;
			this.moduleName();
			this.state = 146;
			this.match(MoveParser.T__3);
			this.state = 147;
			this.attributes();
			this.state = 160;
			this._errHandler.sync(this);
			switch ( this.interpreter.adaptivePredict(this._input, 5, this._ctx) ) {
			case 1:
				{
				this.state = 148;
				this.useDecl();
				}
				break;

			case 2:
				{
				this.state = 149;
				this.friendDecl();
				}
				break;

			case 3:
				// tslint:disable-next-line:no-empty
				{
				}
				break;

			case 4:
				{
				this.state = 158;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if (((((_la - 80)) & ~0x1F) === 0 && ((1 << (_la - 80)) & ((1 << (MoveParser.T__79 - 80)) | (1 << (MoveParser.T__81 - 80)) | (1 << (MoveParser.T__82 - 80)))) !== 0)) {
					{
					this.state = 151;
					this.docComments();
					this.state = 152;
					this.moduleMemberModifiers();
					this.state = 156;
					this._errHandler.sync(this);
					switch (this._input.LA(1)) {
					case MoveParser.T__76:
						{
						this.state = 153;
						this.constantDecl();
						}
						break;
					case MoveParser.T__77:
						{
						this.state = 154;
						this.structDecl();
						}
						break;
					case MoveParser.T__31:
						{
						this.state = 155;
						this.functionDecl();
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					}
				}

				}
				break;
			}
			this.state = 162;
			this.match(MoveParser.T__4);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public useDecl(): UseDeclContext {
		let _localctx: UseDeclContext = new UseDeclContext(this._ctx, this.state);
		this.enterRule(_localctx, 4, MoveParser.RULE_useDecl);
		let _la: number;
		try {
			this.state = 189;
			this._errHandler.sync(this);
			switch ( this.interpreter.adaptivePredict(this._input, 7, this._ctx) ) {
			case 1:
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 164;
				this.match(MoveParser.T__5);
				this.state = 165;
				this.moduleIdent();
				this.state = 166;
				this.useAlias();
				this.state = 167;
				this.match(MoveParser.T__6);
				}
				break;

			case 2:
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 169;
				this.match(MoveParser.T__5);
				this.state = 170;
				this.moduleIdent();
				this.state = 171;
				this.match(MoveParser.T__2);
				this.state = 172;
				this.useMember();
				this.state = 173;
				this.match(MoveParser.T__6);
				}
				break;

			case 3:
				this.enterOuterAlt(_localctx, 3);
				{
				this.state = 175;
				this.match(MoveParser.T__5);
				this.state = 176;
				this.moduleIdent();
				this.state = 177;
				this.match(MoveParser.T__2);
				this.state = 178;
				this.match(MoveParser.T__3);
				this.state = 179;
				this.useMember();
				this.state = 184;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				while (_la === MoveParser.T__7) {
					{
					{
					this.state = 180;
					this.match(MoveParser.T__7);
					this.state = 181;
					this.useMember();
					}
					}
					this.state = 186;
					this._errHandler.sync(this);
					_la = this._input.LA(1);
				}
				this.state = 187;
				this.match(MoveParser.T__4);
				}
				break;
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public useMember(): UseMemberContext {
		let _localctx: UseMemberContext = new UseMemberContext(this._ctx, this.state);
		this.enterRule(_localctx, 6, MoveParser.RULE_useMember);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 191;
			this.match(MoveParser.Identifier);
			this.state = 192;
			this.useAlias();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public useAlias(): UseAliasContext {
		let _localctx: UseAliasContext = new UseAliasContext(this._ctx, this.state);
		this.enterRule(_localctx, 8, MoveParser.RULE_useAlias);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 196;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === MoveParser.T__8) {
				{
				this.state = 194;
				this.match(MoveParser.T__8);
				this.state = 195;
				this.match(MoveParser.Identifier);
				}
			}

			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public script(): ScriptContext {
		let _localctx: ScriptContext = new ScriptContext(this._ctx, this.state);
		this.enterRule(_localctx, 10, MoveParser.RULE_script);
		try {
			let _alt: number;
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 198;
			this.match(MoveParser.T__9);
			this.state = 199;
			this.match(MoveParser.T__3);
			this.state = 205;
			this._errHandler.sync(this);
			_alt = this.interpreter.adaptivePredict(this._input, 9, this._ctx);
			while (_alt !== 2 && _alt !== ATN.INVALID_ALT_NUMBER) {
				if (_alt === 1) {
					{
					{
					this.state = 200;
					this.attributes();
					this.state = 201;
					this.useDecl();
					}
					}
				}
				this.state = 207;
				this._errHandler.sync(this);
				_alt = this.interpreter.adaptivePredict(this._input, 9, this._ctx);
			}
			this.state = 213;
			this._errHandler.sync(this);
			_alt = this.interpreter.adaptivePredict(this._input, 10, this._ctx);
			while (_alt !== 2 && _alt !== ATN.INVALID_ALT_NUMBER) {
				if (_alt === 1) {
					{
					{
					this.state = 208;
					this.attributes();
					this.state = 209;
					this.constantDecl();
					}
					}
				}
				this.state = 215;
				this._errHandler.sync(this);
				_alt = this.interpreter.adaptivePredict(this._input, 10, this._ctx);
			}
			this.state = 216;
			this.attributes();
			this.state = 217;
			this.docComments();
			this.state = 218;
			this.moduleMemberModifiers();
			this.state = 219;
			this.functionDecl();
			this.state = 220;
			this.match(MoveParser.T__4);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public friendDecl(): FriendDeclContext {
		let _localctx: FriendDeclContext = new FriendDeclContext(this._ctx, this.state);
		this.enterRule(_localctx, 12, MoveParser.RULE_friendDecl);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 222;
			this.match(MoveParser.T__10);
			this.state = 223;
			this.nameAccessChain();
			this.state = 224;
			this.match(MoveParser.T__6);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public moduleMemberModifiers(): ModuleMemberModifiersContext {
		let _localctx: ModuleMemberModifiersContext = new ModuleMemberModifiersContext(this._ctx, this.state);
		this.enterRule(_localctx, 14, MoveParser.RULE_moduleMemberModifiers);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 229;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la === MoveParser.T__11 || _la === MoveParser.T__12) {
				{
				{
				this.state = 226;
				this.moduleMemberModifier();
				}
				}
				this.state = 231;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public moduleMemberModifier(): ModuleMemberModifierContext {
		let _localctx: ModuleMemberModifierContext = new ModuleMemberModifierContext(this._ctx, this.state);
		this.enterRule(_localctx, 16, MoveParser.RULE_moduleMemberModifier);
		try {
			this.state = 234;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case MoveParser.T__12:
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 232;
				this.visibility();
				}
				break;
			case MoveParser.T__11:
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 233;
				this.match(MoveParser.T__11);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public visibility(): VisibilityContext {
		let _localctx: VisibilityContext = new VisibilityContext(this._ctx, this.state);
		this.enterRule(_localctx, 18, MoveParser.RULE_visibility);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 236;
			this.match(MoveParser.T__12);
			this.state = 241;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case MoveParser.T__13:
				{
				this.state = 237;
				this.match(MoveParser.T__13);
				this.state = 238;
				this.match(MoveParser.T__9);
				}
				break;
			case MoveParser.T__10:
				{
				this.state = 239;
				this.match(MoveParser.T__10);
				this.state = 240;
				this.match(MoveParser.T__14);
				}
				break;
			case MoveParser.T__11:
			case MoveParser.T__12:
			case MoveParser.T__31:
			case MoveParser.T__76:
			case MoveParser.T__77:
				break;
			default:
				break;
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public attributeValue(): AttributeValueContext {
		let _localctx: AttributeValueContext = new AttributeValueContext(this._ctx, this.state);
		this.enterRule(_localctx, 20, MoveParser.RULE_attributeValue);
		try {
			this.state = 245;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case MoveParser.T__70:
			case MoveParser.T__71:
			case MoveParser.T__73:
			case MoveParser.T__74:
			case MoveParser.T__75:
			case MoveParser.Digit:
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 243;
				this.value();
				}
				break;
			case MoveParser.Identifier:
			case MoveParser.NumericalAddress:
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 244;
				this.nameAccessChain();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
